[bdist_wheel]
universal = 1

[metadata]
name = eks-rolling-update
version = attr: build.__version__.VERSION
license = Apache License, Version 2.0
license_file = LICENSE
description = EKS Rolling Update is a utility for updating the launch configuration or template of worker nodes in an EKS cluster.
long_description = file: README.md
long_description_content_type = text/markdown
author = Craig Huber, Nicolas Bélanger, Sam Weston & contributors
author_email = ch@hellofresh.com
maintainer = Craig Huber & contributors
maintainer_email = ch@hellofresh.com
url = https://github.com/hellofresh/eks-rolling-update
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    boto3 >= 1.9.246
    kubernetes >= 10.0.1
    python-dotenv >= 0.10.2
python_requires = >=3.7

[options.packages.find]
exclude=tests

[options.entry_points]
console_scripts =
    eks_rolling_update.py = eksrollup.cli:main
